--- a/source/layouts/remark.html.haml
+++ b/source/layouts/remark.html.haml
@@ -3,7 +3,8 @@
 %html
   %head
     %title Remark
-    = javascript_include_tag "https://gnab.github.io/remark/downloads/remark-latest.min.js"
+    = javascript_include_tag "remark-latest.min.js"
+    = javascript_include_tag "d3.v4.min.js"
     = stylesheet_link_tag stylesheet
     %meta(name="viewport" content="initial-scale=0.5")
 
