--- a/source/layouts/remark.html.haml
+++ b/source/layouts/remark.html.haml
@@ -4,7 +4,7 @@
   %head
     %title Remark
     = javascript_include_tag "remark-latest.min.js"
-    = javascript_include_tag "d3.v4.min.js"
+    = javascript_include_tag "d3.v4.js"
     = stylesheet_link_tag stylesheet
     %meta(name="viewport" content="initial-scale=0.5")
 
