--- a/source/layouts/index.html.haml
+++ b/source/layouts/index.html.haml
@@ -5,7 +5,7 @@
     %title Remark
     = javascript_include_tag "remark-latest.min.js"
     = javascript_include_tag "d3.v4.js"
-    = stylesheet_link_tag stylesheet
+    = stylesheet_link_tag "default"
     %meta(name="viewport" content="initial-scale=0.5")
 
   %body
