--- a/source/layouts/index.html.haml
+++ b/source/layouts/index.html.haml
@@ -3,9 +3,9 @@
 %html
   %head
     %title Remark
-    = javascript_include_tag "remark-latest.min.js"
-    = javascript_include_tag "d3.v4.js"
-    = stylesheet_link_tag "default"
+    <script src="javascripts/remark-latest.min.js" type="text/javascript"></script>
+    <script src="javascripts/d3.v4.js" type="text/javascript"></script>
+    <link href="stylesheets/default.css" rel="stylesheet" type="text/css">
     %meta(name="viewport" content="initial-scale=0.5")
 
   %body
