fixes from Mike Bostock

--- a/source/stylesheets/default.sass
+++ b/source/stylesheets/default.sass
@@ -22,6 +22,13 @@
 body
   font-family: 'Droid Serif'
   font-size: 20px
+  background: black
+
+.remark-container
+  background: black
+
+.remark-slide-scaler
+  box-shadow: none
 
 h1, h2, h3
   font-family: 'Yanone Kaffeesatz'
